--- a/lib/extra.css
+++ b/lib/extra.css
@@ -116,3 +116,24 @@ label {
 .statusbar_item:last-child > * {
 	width: 45px;	
 }
+#login input[type="text"], #login input[type="password"] {
+	background-color: #fff !important;
+	border-radius: 10px !important;
+	height: 50px !important;
+	border: 2px solid #666;
+}
+button {
+	background-color: #bbb;
+	border: 2px solid #666;
+	border-radius: 10px;	
+	font-weight: bold;
+	font-size: 16px;
+	width: 100%;
+	height: 50px;
+}	
+
+	
+	
+
+
+
