--- a/lib/extra.css
+++ b/lib/extra.css
@@ -131,8 +131,20 @@ button {
 	width: 100%;
 	height: 50px;
 }	
-
+.brownbg {
+	background-color: #4d3321 !important;
+	border: 2px solid black !important;
 	
+}	
+.brownbg > * > * {
+	color: white !important;
+}
+.brownbg > *:* {
+	color: red !important;
+	background-color: green !important;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}	
 	
 
 
