--- a/lib/extra.css
+++ b/lib/extra.css
@@ -25,9 +25,9 @@
 }
 .statusbar_item {
 	color: #999 !important;
-	margin-left: 4%;
+	margin-left: 3%;
 	float: left;
-	font-size: 15px;
+	font-size: 13px;
 	font-weight: bold;
 }
 .statusbar_item:first-child {
@@ -48,7 +48,7 @@
 	margin: 20px 0 2px 33%;
 	width: 33%; 
 }
-.employee_hire_pic {
+.employee_hire_pic1, .employee_hire_pic2, .employee_hire_pic3, .employee_hire_pic4 {
 	margin: 30px 0 2px 22%;
 	width: 65%;
 	margin-top: 30px;
@@ -111,7 +111,15 @@ label {
 	background-color: transparent !important;
 	border: none !important;
 	font-weight: bold;
+	font-size:15px;
 	width: 20px;
+}
+.stat_item_inp_sal {
+	background-color: transparent !important;
+	border: none !important;
+	font-weight: bold;
+	font-size:18px;
+	width: 40px;
 }	
 .statusbar_item:last-child > * {
 	width: 45px;	
@@ -139,13 +147,15 @@ button {
 .brownbg > * > * {
 	color: white !important;
 }
+footer > .brownbg > * {
+	border: 1px solid black !important;
+}
 .brownbg > *:* {
 	color: red !important;
 	background-color: green !important;
 	-webkit-box-shadow: none;
 	box-shadow: none;
 }	
-	
 
 
 
