--- a/lib/extra.css
+++ b/lib/extra.css
@@ -1,5 +1,5 @@
 .mainmenu-button {
-	width=80%;
+	width:80%;
 	margin: 0 auto;
 	background-color: red;
 }
@@ -139,7 +139,23 @@ button {
 	width: 100%;
 	height: 50px;
 	color: white;
-}	
+}
+.dec {
+    background-color: #ff0000;
+	border: 2px solid black;
+	color: black;
+    text-align: center;
+    width: 30px;
+    height: 30px;
+}
+.inc {
+	background-color: #009600;
+	border: 2px solid black;
+	color: black;
+    text-align: center;
+    width: 30px;
+    height: 30px;
+}
 .brownbg {
 	background-color: #4d3321 !important;
 	border: none !important;
@@ -155,12 +171,13 @@ footer > .brownbg > * {
 header.brownbg > * {
 	border-bottom: 2px solid black !important;
 }
-.brownbg > *:* {
+/*.brownbg > *.* {
 	color: red !important;
 	background-color: green !important;
 	-webkit-box-shadow: none;
 	box-shadow: none;
-}	
-
-
-
+}*/
+#salaryInc, #salaryDec{
+  width: 100%;
+  height: 100%;
+}
