--- a/lib/extra.css
+++ b/lib/extra.css
@@ -108,11 +108,15 @@ label {
 	margin: 30px auto auto 36% !important;
 }
 .stat_item_inp {
-	background-color: transparent !important;
 	border: none !important;
-	font-weight: bold;
+    background-color:transparent !important;
+    font-weight: bold;
 	font-size:15px;
 	width: 20px;
+    color: black !important;
+    -webkit-box-shadow: 0px 0px 0px 0px transparent;
+    -moz-box-shadow: 0px 0px 0px 0px transparent;
+    box-shadow: 0px 0px 0px 0px transparent;
 }
 .stat_item_inp_sal {
 	background-color: transparent !important;
@@ -120,6 +124,10 @@ label {
 	font-weight: bold;
 	font-size:18px;
 	width: 40px;
+    color: black !important;
+    -webkit-box-shadow: 0px 0px 0px 0px transparent;
+    -moz-box-shadow: 0px 0px 0px 0px transparent;
+    box-shadow: 0px 0px 0px 0px transparent;
 }	
 .statusbar_item:last-child > * {
 	width: 45px;	
