--- a/lib/extra.css
+++ b/lib/extra.css
@@ -26,7 +26,7 @@
 	color: #999 !important;
 	margin-left: 3%;
 	float: left;
-	font-size: 13px;
+	font-size: 12px;
 	font-weight: bold;
 }
 .statusbar_item:first-child {
@@ -110,8 +110,8 @@ label {
 	border: none !important;
     background-color:transparent !important;
     font-weight: bold;
-	font-size:15px;
-	width: 20px;
+	font-size:13px;
+	width: 22px;
     color: black !important;
     -webkit-box-shadow: 0px 0px 0px 0px transparent;
     -moz-box-shadow: 0px 0px 0px 0px transparent;
@@ -129,7 +129,7 @@ label {
     box-shadow: 0px 0px 0px 0px transparent;
 }	
 .statusbar_item:last-child > * {
-	width: 45px;	
+	width: 55px;	
 }
 #login input[type="text"], #login input[type="password"] {
 	background-color: #fff !important;
@@ -212,26 +212,22 @@ section > footer > nav a {
 	margin-left: -2px;
 }
 #salaryDec {
+  float: left;
+  border-radius: 10px;
+  background-color: red;
+}
+#salaryInc {
+    float: right;
+    background-color: green;
+}
+.salaryButton{
   width: 47% !important;
   height: 50px !important;
-  font-size: 1.8em !important;
+  font-size: 2em !important;
   font-weight: bold !important;
-  float: left;
   text-align: center;
   border: 2px solid black;
   border-radius: 10px;
-  background-color: red;
-  color: black;
-}
-#salaryInc {
-	width: 47% !important;
-	height: 50px !important;
-	font-size: 1.8em;
-	font-weight: bold;
-    float: right;
-    text-align: center;
-    border: 2px solid black;
-    border-radius: 10px;
-    background-color: green;
-    color: black;
+  color: white;
+  line-height: 50px !important;
 }
