--- a/lib/extra.css
+++ b/lib/extra.css
@@ -54,7 +54,7 @@
 }
 .gamelogo {
 	width: 50%;
-	margin: 15%  0 10% 27%;
+	margin: 8%  0 10% 27%;
 }
 .menu-elements > * {
 	width: 50%;
@@ -230,4 +230,15 @@ section > footer > nav a {
   border-radius: 10px;
   color: white;
   line-height: 50px !important;
+}
+header nav.box a {
+/*	background-color: #7a5a44 !important;*/
+	line-height: 32px;
+	height: 32px;
+	margin: 4px;
+	font-size: 0.7em !important;
+	border-radius: 10px;
+	border: 2px solid black;
+	padding-left: 10px;
+	padding-right: 10px;
 }
