--- a/lib/extra.css
+++ b/lib/extra.css
@@ -260,7 +260,7 @@ section > footer > nav a {
 #salaryDec {
   float: left;
   border-radius: 10px;
-  background-color: #b32222;
+  background-color: #d72e2e;
 }
 #salaryInc {
     float: right;
@@ -324,6 +324,7 @@ header #empProfileName, header #invProfileName {
 	font-size: 1em;
 	font-weight: bold;
 	color: white;
+	margin-left: 6%;
 }
 body {
 	max-width: 600px !important;
@@ -331,4 +332,13 @@ body {
 header nav.box.right a {
 	font-size: 4em;
 	line-height: 3.6em;
+}
+label {
+	color: black !important;
+}
+label#invProfileEquity, label#invProfileOffer {
+	margin-top: 30px !important;
+}
+div.statusbar_item:first-child {
+	margin-left: 5%;
 }
