--- a/lib/extra.css
+++ b/lib/extra.css
@@ -342,3 +342,6 @@ label#invProfileEquity, label#invProfileOffer {
 div.statusbar_item:first-child {
 	margin-left: 5%;
 }
+div.statusbar_item > *:first-child {
+	margin-right: 3px !important;
+}
