--- a/lib/extra.css
+++ b/lib/extra.css
@@ -324,7 +324,7 @@ header #empProfileName, header #invProfileName {
 	font-size: 1em;
 	font-weight: bold;
 	color: white;
-	margin-left: 6%;
+	margin-left: 20%;
 }
 body {
 	max-width: 600px !important;
@@ -357,4 +357,46 @@ input#newEmpSkill.1stat_item_inp, input#newEmpSkill2.stat_item_inp, input#newEmp
 input#newEmpSalary1.stat_item_inp_sal, input#newEmpSalary2.stat_item_inp_sal, input#newEmpSalary.stat_item_inp_sal, input#newEmpSalary4.stat_item_inp_sal {
 	margin-left: 1px;
 	font-size: 15px !important;
+}
+
+
+@media only screen and (max-width:790px) {
+	header #empProfileName, header #invProfileName {
+	margin-left: 18%;
+}
+@media only screen and (max-width:730px) {
+	header #empProfileName, header #invProfileName {
+	margin-left: 17%;
+}
+@media only screen and (max-width:690px) {
+	header #empProfileName, header #invProfileName {
+	margin-left: 16%;
+}
+@media only screen and (max-width:640px) {
+	header #empProfileName, header #invProfileName {
+	margin-left: 15%;
+}
+@media only screen and (max-width:590px) {
+	header #empProfileName, header #invProfileName {
+	margin-left: 14%;
+}
+@media only screen and (max-width:540px) {
+	header #empProfileName, header #invProfileName {
+	margin-left: 13%;
+}
+@media only screen and (max-width:510px) {
+	header #empProfileName, header #invProfileName {
+	margin-left: 11%;
+}
+@media only screen and (max-width:470px) {
+	header #empProfileName, header #invProfileName {
+	margin-left: 10%;
+}
+@media only screen and (max-width:420px) {
+	header #empProfileName, header #invProfileName {
+	margin-left: 8%;
+}
+@media only screen and (max-width:370px) {
+	header #empProfileName, header #invProfileName {
+	margin-left: 6%;
 }
